Deployment-configurations/chat-svc-k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-svc-deployment
  labels:
    app: gigforge-chat-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gigforge-chat-svc
  template:
    metadata:
      labels:
        app: gigforge-chat-svc
    spec:
      containers:
      - name: gigforge-chat-svc
        image: muhamedjasim/gigforge-chat_svc:latest
        ports:
        - containerPort: 30005
---

apiVersion: v1
kind: Service
metadata:
  name: gigforge-chat-svc-service
spec:
  type: ClusterIP
  selector:
    app: gigforge-chat-svc
  ports:
    - protocol: TCP
      port: 30005
      targetPort: 30005
