Deployment-configurations/job-svc-k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-svc-deployment
  labels:
    app: gigforge-job-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gigforge-job-svc
  template:
    metadata:
      labels:
        app: gigforge-job-svc
    spec:
      containers:
      - name: gigforge-job-svc
        image: job-svc:latest
        ports:
        - containerPort: 30004
---

apiVersion: v1
kind: Service
metadata:
  name: gigforge-job-svc-service
spec:
  type: NodePort
  selector:
    app: gigforge-job-svc
  ports:
    - protocol: TCP
      port: 30005
      targetPort: 30005
      nodePort: 30015
