Deployment-configurations/project-svc-k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-svc-deployment
  labels:
    app: gigforge-project-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gigforge-project-svc
  template:
    metadata:
      labels:
        app: gigforge-project-svc
    spec:
      containers:
      - name: gigforge-project-svc
        image: muhamedjasim/gigforge-project_svc:latest
        ports:
        - containerPort: 30004
---

apiVersion: v1
kind: Service
metadata:
  name: gigforge-project-svc-service
spec:
  type: ClusterIP
  selector:
    app: gigforge-project-svc
  ports:
    - protocol: TCP
      port: 30004
      targetPort: 30004
