Deployment-configurations/user-svc-k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-svc-deployment
  labels:
    app: gigforge-user-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gigforge-user-svc
  template:
    metadata:
      labels:
        app: gigforge-user-svc
    spec:
      containers:
      - name: gigforge-user-svc
        image: muhamedjasim/gigforge-user_svc:latest
        ports:
        - containerPort: 30001
---

apiVersion: v1
kind: Service
metadata:
  name: gigforge-user-svc-service
spec:
  type: ClusterIP
  selector:
    app: gigforge-user-svc
  ports:
    - protocol: TCP
      port: 30001
      targetPort: 30001
