Deployment-configurations/Ingress-k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gigforge-ingres
  namespace: gigforge
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/server-snippets: |
      location / {
        proxy_set_header Upgrade $http_upgrade;
        proxy_http_version 1.1;
        proxy_set_header X-Forwarded-Host $http_host;
        proxy_set_header X-Forwarded-Proto $scheme;
        proxy_set_header X-Forwarded-For $remote_addr;
        proxy_set_header Host $host;
        proxy_set_header Connection "upgrade";
        proxy_cache_bypass $http_upgrade;
        }
spec:
  tls:
    - hosts:
      - gigforge.jasim.online
      secretName: gigforge-certificate
  ingressClassName: nginx
  rules:
  - host: gigforge.jasim.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend: 
          service:
            name: gigforge-api-gateway-service
            port:
              number: 3000
